--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@ ol > li:hover
 		<div class="header">
 		
 			<div class="logo">
-				<img src="strona/anker.png"/>
+				<img src="strona/Anker.png"/>
 				<span style="color: #A0522D">Żeglarstwo</span>
-				<img src="strona/anker.png"/>
+				<img src="strona/Anker.png"/>
 			</div>
 		</div>
 		<div class="nav">
