--- a/manewry.html
+++ b/manewry.html
@@ -180,9 +180,9 @@ p
 		<div class="header">
 		
 			<div class="logo">
-				<img src="strona/anker.png"/>
+				<img src="strona/Anker.png"/>
 				<span style="color: #A0522D">Żeglarstwo</span>
-				<img src="strona/anker.png"/>
+				<img src="strona/Anker.png"/>
 			</div>
 		</div>
 		<div class="nav">
