--- a/meteo.html
+++ b/meteo.html
@@ -174,9 +174,9 @@ h3
 		<div class="header">
 		
 			<div class="logo">
-				<img src="strona/anker.png"/>
+				<img src="strona/Anker.png"/>
 				<span style="color: #A0522D">Żeglarstwo</span>
-				<img src="strona/anker.png"/>
+				<img src="strona/Anker.png"/>
 			</div>
 		</div>
 
